landing-page-media/style.css
h1,h2,h3,h4,h5,h6 {
font-weight: normal;
font-size: 100%;
margin:0;
padding:0;
}
q:before,q:after {
content:'';
}
abbr,acronym { border: 0;
}

/* Custom CSS
* --------------------------------------- */
body{
font-family: 'Lato', sans-serif;
}
h1{
font-size: 4em;
}
p{
font-size: 1em;
}
.section{
text-align: center;
}

/* Menu
* --------------------------------------- */
.navbar {
  background-color: #003056;
}

#footer-menu{
  position:fixed;
  z-index:70;
  bottom:0;
  width:100%;
  text-align:right;
  font-size:15px;
}
#footer-menu ul{
  padding: 0 40px;
}
#footer-menu li a {
  display: block;
  margin: 0 10px;
  color: #fff;
  text-decoration: none;
}
#footer-menu li a:hover{
  text-decoration:underline;
}
#footer-menu li{
  display:inline-block;
  position:relative;
}

/* ------------------------------------------------------------ */
.section {
  background-size: cover;
  color: #003056;
}

.section .pp-tableCell {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.section .pp-tableCell > h1,
.section .pp-tableCell > p,
.section .pp-tableCell > small {
  padding: 0.2em 0.4em;
  background: rgba(255, 255, 255, 0.7);
  margin: 0;
  margin-bottom: 20px;
  max-width: 800px;
}

.btn.btn-primary {
  background-color: #003056;
  border-color: #003056;
  border-radius: 0;
}
.btn.btn-primary:hover {
  background: rgba(255, 255, 255, 0.7);
  color: #003056;
}

